[gd_scene load_steps=3 format=2]

[ext_resource path="res://Src/GUI/UI/PauseScreen/Image/black.jpg" type="Texture" id=1]
[ext_resource path="res://Assets/Scripts/Pause.gd" type="Script" id=2]

[node name="Pause" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ 512.342 ]
}

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.560784 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -22.0
margin_right = 45.0
margin_bottom = 22.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="VBoxContainer"]
margin_right = 123.0
margin_bottom = 20.0
text = "CONTINUAR"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 123.0
margin_bottom = 44.0
text = "TELA CHEIA"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 123.0
margin_bottom = 68.0
text = "MENU PRINCIPAL"
flat = true

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 123.0
margin_bottom = 92.0
text = "SAIR"
flat = true
[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="VBoxContainer/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
